WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28789
Release the storage mutex whenever leaving JavaScript execution.
https://bugs.webkit.org/show_bug.cgi?id=28789
Summary
Release the storage mutex whenever leaving JavaScript execution.
Jeremy Orlow
Reported
2009-08-27 16:37:15 PDT
http://dev.w3.org/html5/spec/Overview.html#storage-mutex
describes the required behavior. After we leave JavaScript, we must be sure the storage mutex has been released. At the end of evaluate(), if localStorage has been instantiated, tell it to release any locks that may be applicable.
Attachments
Patch v1
(2.84 KB, patch)
2009-08-27 16:38 PDT
,
Jeremy Orlow
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Orlow
Comment 1
2009-08-27 16:38:49 PDT
Created
attachment 38698
[details]
Patch v1
Jeremy Orlow
Comment 2
2009-08-27 17:14:55 PDT
Committed
r47846
: <
http://trac.webkit.org/changeset/47846
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug