2009-08-27  Jeremy Orlow  <jorlow@chromium.org>

Reviewed by Darin Fisher.

        Release the storage mutex whenever leaving JavaScript execution.
        https://bugs.webkit.org/show_bug.cgi?id=28789

        http://dev.w3.org/html5/spec/Overview.html#storage-mutex describes the
        required behavior.  After we leave JavaScript, we must be sure the storage
        mutex has been released.  At the end of evaluate(), if localStorage has been
        instantiated, tell it to release any locks that may be applicable.

        * bindings/js/ScriptController.cpp:
        (WebCore::ScriptController::evaluate):
        * bindings/v8/ScriptController.cpp:
        (WebCore::ScriptController::evaluate):


Canonical link: https://commits.webkit.org/39422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47846 268f45cc-cd09-0410-ab3c-d52691b4dbfc