WebCore/bindings/v8/ScriptController.cpp
@@ -45,7 +45,10 @@
 #include "npruntime_impl.h"
 #include "npruntime_priv.h"
 #include "NPV8Object.h"
+#include "Page.h"
+#include "PageGroup.h"
 #include "ScriptSourceCode.h"
+#include "StorageNamespace.h"
 #include "Widget.h"
 #include "XSSAuditor.h"
 
@@ -218,6 +221,12 @@ ScriptValue ScriptController::evaluate(const ScriptSourceCode& sourceCode)
     // Evaluating the JavaScript could cause the frame to be deallocated
     // so we start the keep alive timer here.
     m_frame->keepAlive();
+
+    // Release any localStorage locks we may still have.
+    Page* page = m_frame->page();
+    StorageNamespace* localStorage = page ? page->group().localStorage() : 0;
+    if (localStorage)
+        localStorage->unlock();
 
     if (object.IsEmpty() || object->IsUndefined())
         return ScriptValue();
